add components query to picker

--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -269,5 +269,13 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
  </tr>
 #end
 </tbody></table>
+<br/><p>--------------------------------------COMPONENTS------------------------</p><br/>
+<table><tbody>
+#foreach ($c in $components)
+ <tr>
+  <td>$c.name</td>
+ </tr>
+#end
+</tbody></table>
 </body>
 </html>
